Closed Bug 1672901 Opened 4 years ago Closed 4 years ago

AppleDecoderModule.cpp:156:9: error: 'VTRegisterSupplementalVideoDecoderIfAvailable' is only available on macOS 11.0 or newe

Categories

(Core :: Audio/Video: Playback, defect, P1)

defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox84 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

When building with the 11.0 SDK with warnings as errors:

[task 2020-10-23T02:18:11.818Z] 02:18:11    ERROR -  /Users/cltbld/tasks/task_1603416743/checkouts/gecko/dom/media/platforms/apple/AppleDecoderModule.cpp:156:9: error: 'VTRegisterSupplementalVideoDecoderIfAvailable' is only available on macOS 11.0 or newer [-Werror,-Wunguarded-availability-new]
[task 2020-10-23T02:18:11.818Z] 02:18:11     INFO -      if (VTRegisterSupplementalVideoDecoderIfAvailable) {
[task 2020-10-23T02:18:11.819Z] 02:18:11     INFO -          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2020-10-23T02:18:11.819Z] 02:18:11     INFO -  /Users/cltbld/tasks/task_1603416743/checkouts/gecko/dom/media/platforms/apple/AppleDecoderModule.cpp:22:13: note: 'VTRegisterSupplementalVideoDecoderIfAvailable' has been marked as being introduced in macOS 11.0 here, but the deployment target is macOS 10.9.0
[task 2020-10-23T02:18:11.820Z] 02:18:11     INFO -  extern void VTRegisterSupplementalVideoDecoderIfAvailable(
[task 2020-10-23T02:18:11.820Z] 02:18:11     INFO -              ^
[task 2020-10-23T02:18:11.821Z] 02:18:11     INFO -  /Users/cltbld/tasks/task_1603416743/checkouts/gecko/dom/media/platforms/apple/AppleDecoderModule.cpp:156:9: note: enclose 'VTRegisterSupplementalVideoDecoderIfAvailable' in a __builtin_available check to silence this warning
[task 2020-10-23T02:18:11.821Z] 02:18:11     INFO -      if (VTRegisterSupplementalVideoDecoderIfAvailable) {
[task 2020-10-23T02:18:11.822Z] 02:18:11     INFO -          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2020-10-23T02:18:11.822Z] 02:18:11    ERROR -  /Users/cltbld/tasks/task_1603416743/checkouts/gecko/dom/media/platforms/apple/AppleDecoderModule.cpp:157:7: error: 'VTRegisterSupplementalVideoDecoderIfAvailable' is only available on macOS 11.0 or newer [-Werror,-Wunguarded-availability-new]
[task 2020-10-23T02:18:11.823Z] 02:18:11     INFO -        VTRegisterSupplementalVideoDecoderIfAvailable(kCMVideoCodecType_VP9);
[task 2020-10-23T02:18:11.823Z] 02:18:11     INFO -        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2020-10-23T02:18:11.824Z] 02:18:11     INFO -  /Users/cltbld/tasks/task_1603416743/checkouts/gecko/dom/media/platforms/apple/AppleDecoderModule.cpp:22:13: note: 'VTRegisterSupplementalVideoDecoderIfAvailable' has been marked as being introduced in macOS 11.0 here, but the deployment target is macOS 10.9.0
[task 2020-10-23T02:18:11.824Z] 02:18:11     INFO -  extern void VTRegisterSupplementalVideoDecoderIfAvailable(
[task 2020-10-23T02:18:11.824Z] 02:18:11     INFO -              ^
[task 2020-10-23T02:18:11.825Z] 02:18:11     INFO -  /Users/cltbld/tasks/task_1603416743/checkouts/gecko/dom/media/platforms/apple/AppleDecoderModule.cpp:157:7: note: enclose 'VTRegisterSupplementalVideoDecoderIfAvailable' in a __builtin_available check to silence this warning
[task 2020-10-23T02:18:11.825Z] 02:18:11     INFO -        VTRegisterSupplementalVideoDecoderIfAvailable(kCMVideoCodecType_VP9);
[task 2020-10-23T02:18:11.826Z] 02:18:11     INFO -        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2020-10-23T02:18:13.461Z] 02:18:13     INFO -  /usr/bin/clang++ -isysroot /Applications/Xcode-beta.app//Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.0.sdk -std=gnu++17 --target=arm64-apple-darwin -o Unified_cpp_dom_media4.o -c  -fvisibility=hidden -fvisibility-inlines-hidden -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DHAVE_UINT64_T -DWEBRTC_POSIX -DWEBRTC_BUILD_LIBEVENT -DWEBRTC_MAC -DMOZILLA_INTERNAL_API -DTRACING -DOS_POSIX=1 -DOS_MACOSX=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/Users/cltbld/tasks/task_1603416743/checkouts/gecko/dom/media -I/Users/cltbld/tasks/task_1603416743/build/obj-build/dom/media -I/Users/cltbld/tasks/task_1603416743/checkouts/gecko/caps -I/Users/cltbld/tasks/task_1603416743/checkouts/gecko/docshell/base -I/Users/cltbld/tasks/task_1603416743/checkouts/gecko/dom/base -I/Users/cltbld/tasks/task_1603416743/checkouts/gecko/layout/generic -I/Users/cltbld/tasks/task_1603416743/checkouts/gecko/layout/xul -I/Users/cltbld/tasks/task_1603416743/checkouts/gecko/media/libyuv/libyuv/include -I/Users/cltbld/tasks/task_1603416743/checkouts/gecko/netwerk/base -I/Users/cltbld/tasks/task_1603416743/checkouts/gecko/toolkit/content/tests/browser -I/Users/cltbld/tasks/task_1603416743/checkouts/gecko/dom/media/webrtc/common -I/Users/cltbld/tasks/task_1603416743/checkouts/gecko/third_party/libwebrtc -I/Users/cltbld/tasks/task_1603416743/checkouts/gecko/third_party/libwebrtc/webrtc -I/Users/cltbld/tasks/task_1603416743/build/obj-build/ipc/ipdl/_ipdlheaders -I/Users/cltbld/tasks/task_1603416743/checkouts/gecko/ipc/chromium/src -I/Users/cltbld/tasks/task_1603416743/checkouts/gecko/ipc/glue -I/Users/cltbld/tasks/task_1603416743/build/obj-build/dist/include -I/Users/cltbld/tasks/task_1603416743/build/obj-build/dist/include/nspr -I/Users/cltbld/tasks/task_1603416743/build/obj-build/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /Users/cltbld/tasks/task_1603416743/build/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fno-strict-aliasing -stdlib=libc++ -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -O3 -fno-omit-frame-pointer -funwind-tables -Werror -Wno-error=shadow -Wno-error=attributes -Wno-error=shadow  -MD -MP -MF .deps/Unified_cpp_dom_media4.o.pp   Unified_cpp_dom_media4.cpp
[task 2020-10-23T02:18:13.794Z] 02:18:13     INFO -  2 errors generated.
[task 2020-10-23T02:18:13.836Z] 02:18:13    ERROR -  make[4]: *** [Unified_cpp_dom_media_platforms0.o] Error 1
[task 2020-10-23T02:18:13.836Z] 02:18:13     INFO -  make[4]: *** Waiting for unfinished jobs....
Assignee: nobody → mh+mozilla
Severity: -- → S1
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/46a0e993f8bb
Fix failure to build with 11.0 macOS SDK. r=jya
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
Keywords: regression
Priority: -- → P1
Blocks: 1733508
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: