Bug 1672901 - Fix failure to build with 11.0 macOS SDK. r=jya

Differential Revision: https://phabricator.services.mozilla.com/D94561